--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
+    "base-64": "^1.0.0",
+    "qs": "^6.11.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-bootsplash": "^4.3.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.15.0"
+    "react-native-screens": "^3.15.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
