--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^13.0.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
