--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.9",
+    "@react-native-masked-view/masked-view": "^0.2.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
@@ -20,8 +21,10 @@
     "react-native": "0.69.4",
     "react-native-bootsplash": "^4.3.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "^13.0.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
